<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/egg"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/activity_login_tv_welcome"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/roundstyle"
            android:layout_marginTop="80dp"
            android:bottomLeftRadius="200dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/green"
            android:fontFamily="@font/inter"
            android:textSize="27dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            ></TextView>

        <TextView
            android:id="@+id/activity_login_tv_loginToAccount"
            android:layout_width="325dp"
            android:layout_height="35dp"
            android:layout_marginTop="260dp"
            android:text="@string/logintoaccount"
            android:textSize="26sp"
            android:fontFamily="@font/inter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            ></TextView>

        <TextView
            android:id="@+id/activity_login_tv_email"
            android:layout_width="325dp"
            android:layout_height="30dp"
            android:layout_marginTop="320dp"
            android:text="Email Address"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            ></TextView>

        <EditText
            android:id="@+id/activity_login_et_email"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:layout_marginTop="350dp"
            android:background="@drawable/roundstyle"
            android:paddingLeft="10dp"
            android:fontFamily="@font/inter"
            android:hint="e.g. example@gmail.com"
            android:textSize="14dp"
            android:textColor="@color/ghost"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            ></EditText>

<!--        <TextView-->
<!--            android:id="@+id/username"-->
<!--            android:layout_width="325dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="400dp"-->
<!--            android:text="Email Address"-->
<!--            android:textSize="16sp"-->
<!--            android:fontFamily="@font/inter"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            ></TextView>-->

<!--        <EditText-->
<!--            android:id="@+id/etUsername"-->
<!--            android:layout_width="325dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginTop="430dp"-->
<!--            android:background="@drawable/roundstyle"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:fontFamily="@font/inter"-->
<!--            android:hint="e.g. example@gmail.com"-->
<!--            android:textSize="14dp"-->
<!--            android:textColor="@color/ghost"-->
<!--            android:inputType="text"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            ></EditText>-->
        <TextView
            android:id="@+id/activity_login_tv_password"
            android:layout_width="325dp"
            android:layout_height="30dp"
            android:layout_marginTop="400dp"
            android:fontFamily="@font/inter"
            android:text="Password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <EditText
            android:id="@+id/activity_login_et_password"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:layout_marginTop="430dp"
            android:background="@drawable/roundstyle"
            android:fontFamily="@font/inter"
            android:hint="********"
            android:paddingLeft="10dp"
            android:textColor="@color/ghost"
            android:textSize="14dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            ></EditText>

<!--        <TextView-->
<!--            android:id="@+id/confirmPassword"-->
<!--            android:layout_width="325dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="560dp"-->
<!--            android:fontFamily="@font/inter"-->
<!--            android:text="Confirm Password"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"></TextView>-->

<!--        <EditText-->
<!--            android:id="@+id/etConfirmPassword"-->
<!--            android:layout_width="325dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginTop="590dp"-->
<!--            android:background="@drawable/roundstyle"-->
<!--            android:fontFamily="@font/inter"-->
<!--            android:hint="********"-->
<!--            android:paddingLeft="10dp"-->
<!--            android:textColor="@color/ghost"-->
<!--            android:textSize="14dp"-->
<!--            android:inputType="textPassword"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            ></EditText>-->

        <Button
            android:id="@+id/activity_login_btn_login"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginTop="500dp"
            android:background="@drawable/button_g"
            android:text="Login"
            android:textColor="@color/white"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_login_tv_registerHere"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="555dp"
            android:fontFamily="@font/inter"
            android:text="@string/register"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <ProgressBar
            android:id="@+id/activity_login_pg_progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="590dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>